# qaguru_python_19_mobile

./: .gitignore  config.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
selene_in_action/utils/: allure.py
tests/: conftest.py
tests/android_app/: conftest.py  test_wikipedia.py
tests/ios_app/: test_wikipedia_ios.py
tests/web/: test_wikipedia.py
